--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ sintetic_library/build/lib/sintetic_library/__init__.py
 sintetic_library/build/lib/sintetic_library/core.py
 sintetic_library/src/sintetic_client.egg-info/dependency_links.txt
 .vscode/settings.json
+.gitignore
